--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Siddhant Kameswar",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
+    "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.16",
     "js-yaml": "^4.1.0",
     "postcss": "^8.4.32",
