--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "private": true,
   "author": "Siddhant Kameswar",
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.1",
+    "@11ty/eleventy": "^3.0.0-alpha.13",
     "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.19",
     "js-yaml": "^4.1.0",
