--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "eleventy --serve",
-    "build": "eleventy"
+    "build": "eleventy",
+    "build:js": "esbuild --bundle --minify --outdir=js/dist js/src/*.ts"
   },
   "private": true,
   "author": "Siddhant Kameswar",
   "devDependencies": {
     "@11ty/eleventy": "^3.0.0-alpha.13",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/alpinejs": "^3.13.10",
+    "alpinejs": "^3.14.1",
     "autoprefixer": "^10.4.19",
+    "esbuild": "^0.23.0",
     "js-yaml": "^4.1.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3"
