start on contact form backend

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "js-yaml": "^4.1.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3"
-  }
+  },
+  "workspaces": [
+    "functions"
+  ]
 }
