--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "eleventy --serve",
-    "build": "eleventy",
-    "build:js": "esbuild --bundle --minify --outdir=js/dist js/src/*.ts"
+    "build": "npm run build:js && NODE_ENV=production eleventy",
+    "build:js": "esbuild --bundle --minify --outdir=js/dist js/src/*.ts",
+    "clean": "rm -rf dist/ && rm -rf js/dist/"
   },
   "private": true,
   "author": "Siddhant Kameswar",
@@ -15,9 +16,13 @@
     "alpinejs": "^3.14.1",
     "autoprefixer": "^10.4.19",
     "esbuild": "^0.23.0",
+    "htmlnano": "^2.1.1",
     "js-yaml": "^4.1.0",
+    "lightningcss": "^1.25.1",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
+    "svgo": "^3.3.2",
+    "tailwindcss": "^3.4.3",
+    "terser": "^5.31.3"
   },
   "workspaces": [
     "functions"
