--- a/functions/package.json
+++ b/functions/package.json
@@ -3,5 +3,8 @@
   "dependencies": {
     "@cloudflare/workers-types": "^4.20240725.0",
     "mimetext": "^3.0.24"
+  },
+  "devDependencies": {
+    "zod": "^3.23.8"
   }
 }
