--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -4,7 +4,8 @@
     "module": "esnext",
     "lib": ["esnext"],
     "types": ["@cloudflare/workers-types"],
-    "moduleResolution": "bundler"
+    "moduleResolution": "bundler",
+    "strict": true
   },
   "include": ["./api/*.ts", "./types.d.ts"]
 }
