--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   "type": "module",
   "author": "Siddhant Kameswar",
   "devDependencies": {
-    "@11ty/eleventy": "^3.0.0-alpha.13",
-    "@tailwindcss/forms": "^0.5.7",
-    "@types/alpinejs": "^3.13.10",
-    "alpinejs": "^3.14.1",
-    "autoprefixer": "^10.4.19",
-    "esbuild": "^0.23.0",
+    "@11ty/eleventy": "^3.0.0",
+    "@tailwindcss/forms": "^0.5.9",
+    "@types/alpinejs": "^3.13.11",
+    "alpinejs": "^3.14.8",
+    "autoprefixer": "^10.4.20",
+    "esbuild": "^0.24.2",
     "htmlnano": "^2.1.1",
     "js-yaml": "^4.1.0",
-    "lightningcss": "^1.25.1",
-    "postcss": "^8.4.38",
+    "lightningcss": "^1.28.2",
+    "postcss": "^8.4.49",
     "svgo": "^3.3.2",
     "tailwindcss": "^3.4.3",
-    "terser": "^5.31.3"
+    "terser": "^5.37.0"
   },
   "workspaces": [
     "functions"
